@@ -31,5 +31,6 @@ int lightcom(MUD &engine, Action &act_used);
 int extinguishcom(MUD &engine, Action &act_used);
 int summoncom(MUD &engine, Action &act_used);
 int eatcom(MUD &engine, Action &act_used);
+int hitcom(MUD &engine, Action &act_used);
 
 #endif // ifndef ACTIONS
